Create fully-functioning console app

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <h1>Open Console</h1>
-    <script>
-      console.log("Success!");
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
