--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h1>Open Console</h1>
+    <h1>Refresh the page and open console</h1>
     <script src="app.js"></script>
   </body>
 </html>
